--- a/Frontend/app/ios/Runner/Info.plist
+++ b/Frontend/app/ios/Runner/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Нам нужен доступ к GPS, чтобы точно определить адрес проблемы на карте.</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Нам нужен доступ к GPS, чтобы точно определить адрес проблемы на карте.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Нам нужен доступ к камере, чтобы вы могли сделать фото нарушения.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Нам нужен доступ к галерее, чтобы вы могли загрузить фото нарушения.</string>
 	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
